# FloppyTrip

./: .gitignore  FloppyTrip.sln  README.md  links.txt
FloppyTrip/: Animation.cpp  Animation.h  CMakeLists.txt  FloppyTrip.vcxproj  FloppyTrip.vcxproj.filters  Game.cpp  Game.h  Pipe.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Vector.cpp  Vector.h  linecounter.au3  main.cpp
FloppyTrip/Resources/Font/: font.xml  font2.xml  font_small.xml  pixelFont.xml
FloppyTrip/Resources/Textures/: Untitled.xcf  pipe2.xcf  pipe_head2.xcf  pipe_valve4.xcf  spacebar.xcf  startScreen.xcf
FloppyTrip/tinyxml2-master/lib/: dtinyxml2.lib  dtinyxml2_100.lib  tinyxml2.lib
FloppyTrip/tinyxml2-master/tinyxml2/: test.vcxproj  tinyxml2.vcxproj
FloppyTrip/tinyxml2-master/tinyxml2/temp/Win32-Debug-Dll/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tinyxml2.lastbuildstate  tinyxml2.write.1.tlog  vc110.idb
FloppyTrip/tinyxml2-master/tinyxml2/temp/Win32-Debug-Lib/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  tinyxml2.lastbuildstate  vc100.idb  vc110.idb
FloppyTrip/tinyxml2-master/tinyxml2/temp/Win32-Release-Lib/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  tinyxml2.lastbuildstate
